"#" items refer to tickets. See <http://dev.openguides.org/report/9> for details.
0.58    ?? September 2006
        Tidy up some minor bugs in the new features.
        Add RDF autodiscovery link to nodes' <head> section.
        Add UPGRADING file which summarises inmportant information for people
        upgrading.

0.57    12 September 2006
        New interfaces:
        * Admin interface.
        * Show nodes missing metadata.
        * Moderate edits (based on Wiki::Toolkit moderation).
        NOTE: these functions should be considered unstable, and may change 
          over future releases.

        Lots more Atom and RSS feeds, including for searching.
        Four new config file options: moderation_requires_password, 
          enable_node_image, enable_common_categories, enable_common_locales
        Search::InvertedIndex support is deprecated as of this release.
          Please upgrade to Plucene if you are still using it.
        Tidy up some template bits

0.56    14 June 2006
        Fixed bug introduced in feed formatting where Atom feeds would be
          produced when asked for RSS and vice versa.

0.55    13 June 2006
        Versioned dependency on Wiki::Toolkit to avoid development
          versions.
        Support generating feeds of a node's version listing, in addition
          to feeds of the recent changes. For more information on OpenGuides 
          feeds, see http://dev.openguides.org/wiki/FeedsIntro

0.54_02 8 June 2006
        Pass the feed_listing (currently just recent_changes) through all
          the feed related code, rather than assuming it'll only ever be
          recent changes. Will allow other listings of nodes to be handled
          in the future.

0.54_01 16 May 2006
        Support for Atom feeds for RecentChanges.
        #118 Use Wiki::Toolkit. NOTE this is a development snapshot and is
          not suitable for production use. It may eat your data! Tests on