@@ -4,6 +4,8 @@
         Add RDF autodiscovery link to nodes' <head> section.
         Add UPGRADING file which summarises inmportant information for people
         upgrading.
+        Add an optional new config parameter, http_charset, which will set
+         an explict charset http header on all responses.
 
 0.57    12 September 2006
         New interfaces:
